[gd_scene load_steps=16 format=2]

[ext_resource path="res://Spaceship/Spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Space_Stars2.png" type="Texture" id=3]
[ext_resource path="res://Particles/VelocityParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pause.gd" type="Script" id=5]
[ext_resource path="res://Fonts/tinypixel/tinypixel.otf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/Button.pxo" type="Texture" id=7]
[ext_resource path="res://GameOverScreen.gd" type="Script" id=8]
[ext_resource path="res://UI/Button Hover.pxo" type="Texture" id=9]
[ext_resource path="res://UI/Pause Button.pxo" type="Texture" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float scroll_speed: hint_range(0.0, 1.5);

void fragment() {
	vec2 shifteduv = UV;
	shifteduv.y -= TIME * scroll_speed;
	vec4 color = texture(TEXTURE, shifteduv);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/scroll_speed = 0.4

[sub_resource type="DynamicFont" id=3]
size = 7
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 7
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 7
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 90.0
margin_bottom = 183.0
rect_min_size = Vector2( 90, 160 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spaceship" parent="." instance=ExtResource( 1 )]

[node name="MoveTween" type="Tween" parent="Spaceship"]

[node name="Enemies" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="VelocityParticles" parent="." instance=ExtResource( 4 )]
position = Vector2( 45, 0 )

[node name="Pause" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="Pause"]
modulate = Color( 0.568627, 0.533333, 0.533333, 1 )
position = Vector2( 82, 3 )
normal = ExtResource( 10 )
visibility_mode = 1

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -23.0
margin_right = 24.0
margin_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/VBoxContainer"]
margin_right = 48.0
margin_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Pause/VBoxContainer/VBoxContainer"]
self_modulate = Color( 0.207843, 0.360784, 0.717647, 1 )
margin_right = 48.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 15, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artifacts" type="GridContainer" parent="Pause/VBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 41.0
margin_bottom = 8.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtifactDescription" type="Panel" parent="Pause/VBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 48.0
margin_bottom = 27.0
mouse_filter = 1

[node name="Label" type="Label" parent="Pause/VBoxContainer/VBoxContainer/ArtifactDescription"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -7.0
margin_right = 46.5
margin_bottom = 7.0
rect_scale = Vector2( 0.8, 0.8 )
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "Yare yare daze"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Pause/VBoxContainer"]
margin_top = 57.0
margin_right = 48.0
margin_bottom = 93.0

[node name="Continue" type="TextureButton" parent="Pause/VBoxContainer/VBoxContainer2"]
margin_right = 48.0
margin_bottom = 16.0
rect_min_size = Vector2( 48, 16 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/VBoxContainer/VBoxContainer2/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="Pause/VBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 48.0
margin_bottom = 36.0
rect_min_size = Vector2( 48, 16 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/VBoxContainer/VBoxContainer2/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -37.0
margin_right = 24.0
margin_bottom = 37.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOverScreen/VBoxContainer"]
margin_right = 48.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 5 )
text = "Game over"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="GameOverScreen/VBoxContainer"]
margin_top = 58.0
margin_right = 48.0
margin_bottom = 74.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="Label" type="Label" parent="GameOverScreen/VBoxContainer/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="destroyed" from="Spaceship" to="." method="_on_Spaceship_destroyed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Pause/TouchScreenButton" to="Pause" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/VBoxContainer2/Continue" to="Pause" method="_on_Continue_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/VBoxContainer2/Quit" to="Pause" method="_on_Quit_pressed"]
[connection signal="pressed" from="GameOverScreen/VBoxContainer/Quit" to="GameOverScreen" method="_on_Quit_pressed"]
